# loscaballeros

./: README.md  app.py  index.html  process_image.py
3d-playtime/My project/Assets/: GeneratePlanes.cs  PlayerController.cs  bear_basic_output.ply  plane_transforms.json
3d-playtime/My project/Assets/Scenes/: SampleScene.unity
3d-playtime/My project/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
3d-playtime/pointcloud/: Brown_basic_output.ply  Brown_final_output.ply  NotreDame_basic_output.ply  NotreDame_final_output.ply  basic_output.ply  bear_final_output.ply  cluster_point_cloud.py  dollar_basic_output.ply  dollar_final_output.ply  final_output.ply  generate_point_cloud.py  helpers.py  output.ply  plane_transforms.json  pyproject.toml  student.py
3d-playtime/unity/Assets/: ComponentAdding.cs  GeneratePlanes.cs  PlayerController.cs
3d-playtime/unity/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
backend/: README.md  app.py  geolocation.py  requirements.txt
