[project]
name = "csci1430"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tqdm",
    "termcolor",
    "numpy==2.4.1",
    "matplotlib==3.10.8",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "opencv-contrib-python==4.13.0.90",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tensorboard==2.20.0",
    "lime==0.2.0.1",
    "networkx>=3.6.1",
    "open3d>=0.19.0",
]
